--- a/Lab Exam Mid-Term FA20-BCS-042/Lab_Exam.html
+++ b/Lab Exam Mid-Term FA20-BCS-042/Lab_Exam.html
@@ -191,8 +191,7 @@
   
     <!-- Copyright -->
     <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.025);">
-      © 2021 Copyright:
-      <a class="text-reset fw-bold" href="https://mdbootstrap.com/">MDBootstrap.com</a>
+      FA20-BCS-042 Arbaz Ahmad
     </div>
     <!-- Copyright -->
   </footer>
